# BEST-RANKING_SEARCH

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  test.ps1
data/: stopwords.txt
docs/: doc1.txt  doc2.txt  doc3.txt  doc4.txt  doc5.txt
src/: auth.h  bk_trie.cpp  bk_trie.h  bm25.cpp  bm25.h  compress.h  config.cpp  config.h  config.ini  crawler.h  db.h  indexer.cpp  indexer.h  intern.cpp  intern.h  logger.cpp  logger.h  lru_cache.h  main.cpp  main_server.cpp  metrics.cpp  metrics.h  query_log.h  query_parser.cpp  query_parser.h  shard_router.h  threadpool.h  tokenizer.cpp  tokenizer.h  util.cpp  util.h  varint.cpp  varint.h  wal.cpp  wal.h
src/api/: engine_context.h  routes.cpp  routes.h  server.cpp  server.h
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  api.js  index.css
ui/src/components/: Highlight.jsx  Navbar.css  Navbar.jsx  ResultCard.css  ResultCard.jsx  SearchBar.css  SearchBar.jsx
ui/src/pages/: AdminPage.css  AdminPage.jsx  DashboardPage.css  DashboardPage.jsx  DocumentPage.css  DocumentPage.jsx  SearchPage.css  SearchPage.jsx
